tarmac/new_pattern24/kubernetes/applications/nginx-web/overlays/environments/devops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-web
spec:
  ingressClassName: traefik-internal
  rules:
  - host: devops-nginx-web.cliniciannexus.io
    http:
      paths:
      - backend:
          service:
            name: nginx-service
            port:
              number: 80
        path: /
        pathType: Prefix
